# abnormal

./: .hgignore  LICENSE  Makefile  README.md  README.rst  README.txt  __init__.py  design.txt  outline.txt  pyproject.toml  requirements.txt  run-mypy  run-tests  setup.py  stuttering.txt  suppliers_parts.db  test_tlexer.py  test_todb.py  tlexer.py  todb.py  work_plan.txt
docs/source/: api.rst  conf.py  index.rst  introduction.rst  principles.rst  quickstart.rst
research/: aggregate.numbers  numeric.numbers  select.txt  select89.txt  select_stack.txt  trig.numbers
src/: exceptions.py  todb.py
src/abnormal/: __init__.py  base.py  dbtype.py  driver.py  exceptions.py  format.py  lexer.py  misc.py  pending.py  tlexer.py  todb.py
src/abnormal/driver/: __init__.py  db2.py  oracle.py  sqlite3.py  standard.py
tests/: __init__.py  test_tlexer.py  test_todb.py  test_ze2e.py  test_zupins.py
tests/dummydb/: common.py  format.py  named.py  numeric.py  pyformat.py  qmark.py
