[project]
name = "abnormal"
version = "0.2.0"
description = "The anti-ORM."
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["database", "sql", "data", "marshalling", "ORM alternative"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: SQL",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
# dependencies = []

[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "abnormal"

[tool.flit.sdist]
include = [
    "docs/"
]
exclude = [
    "docs/_build/",
]

# [project.urls]
# see https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# [dependency-groups]
# docs = ["sphinx"]
